--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = network-control
+name = network_control
 version = 0.0.1
 author = Jennifer Stiso
 author_email = danibassettlab@gmail.com
