adding linden as author

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = network_control
 version = 0.0.3
-author = Jennifer Stiso
+author = Jennifer Stiso and Linden Parkes
 author_email = danibassettlab@gmail.com
 description = Python implementation of concepts from network control theory
 long_description = file: README.md
