--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
 name = network_control
-version = 0.0.3
+version = 0.0.4
 author = Jennifer Stiso and Linden Parkes
-author_email = 
+author_email =
     jeni.stiso@gmail.com
     lindenmp@seas.upenn.edu
 
 description = Python implementation of concepts from network control theory
-long_description = file: README.md
+long_description = file: README.rst
 long_description_content_type = text/markdown
 url = https://github.com/BassettLab/control_package
 project_urls =
