--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,11 @@ Temporary Items
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/control_package.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
