--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,14 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+# other stuff for data, manuscript etc (Linden)
+data
+results
+dissemination
+matlab_scripts
+scripts_scratch
+data_for_testers
+
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
