updated to nctpy

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = network_control
+name = nctpy
 version = 0.0.5
 author = Jennifer Stiso, Linden Parkes and Jason Kim
 author_email =
@@ -12,7 +12,7 @@ long_description = file: README.rst
 long_description_content_type = text/markdown
 url = https://github.com/BassettLab/control_package
 project_urls =
-    Bug Tracker = https://github.com/BassettLab/control_package/issues
+    Bug Tracker = https://github.com/BassettLab/nctpy/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
@@ -26,5 +26,10 @@ python_requires = >=3.6
 install_requires=
     numpy
     scipy
+    tqdm
+    statsmodels
+    seaborn
+    nibabel
+    nilearn
 [options.packages.find]
 where = src
