--- a/environment.yml
+++ b/environment.yml
@@ -34,7 +34,6 @@ dependencies:
   - giflib=5.2.1
   - icu=58.2
   - idna=3.4
-  - importlib-metadata=4.11.3
   - intel-openmp=2021.4.0
   - ipykernel=6.15.2
   - ipython=8.6.0
@@ -151,10 +150,25 @@ dependencies:
   - zlib=1.2.13
   - zstd=1.5.2
   - pip:
+    - build==0.9.0
+    - commonmark==0.9.1
+    - docutils==0.19
+    - importlib-metadata==5.1.0
+    - jaraco-classes==3.2.3
     - joblib==1.2.0
+    - keyring==23.11.0
+    - more-itertools==9.0.0
     - nibabel==4.0.2
     - nilearn==0.9.2
+    - pep517==0.13.0
+    - pkginfo==1.8.3
+    - readme-renderer==37.3
+    - requests-toolbelt==0.10.1
+    - rfc3986==2.0.0
+    - rich==12.6.0
     - scikit-learn==1.1.3
     - sklearn==0.0.post1
     - threadpoolctl==3.1.0
+    - tomli==2.0.1
+    - twine==4.0.1
 prefix: /Users/lindenmp/opt/anaconda3/envs/nctpy
