--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: nctpy
 channels:
   - defaults
 dependencies:
+  - alabaster=0.7.12
   - anyio=3.5.0
   - appnope=0.1.2
   - argon2-cffi=21.3.0
@@ -21,6 +22,7 @@ dependencies:
   - certifi=2022.9.24
   - cffi=1.15.1
   - charset-normalizer=2.0.4
+  - colorama=0.4.5
   - cryptography=38.0.1
   - cycler=0.11.0
   - debugpy=1.5.1
@@ -34,6 +36,7 @@ dependencies:
   - giflib=5.2.1
   - icu=58.2
   - idna=3.4
+  - imagesize=1.4.1
   - intel-openmp=2021.4.0
   - ipykernel=6.15.2
   - ipython=8.6.0
@@ -108,7 +111,6 @@ dependencies:
   - ptyprocess=0.7.0
   - pure_eval=0.2.2
   - pycparser=2.21
-  - pygments=2.11.2
   - pyopenssl=22.0.0
   - pyparsing=3.0.9
   - pyrsistent=0.18.0
@@ -126,7 +128,14 @@ dependencies:
   - setuptools=65.5.0
   - six=1.16.0
   - sniffio=1.2.0
+  - snowballstemmer=2.2.0
   - soupsieve=2.3.2.post1
+  - sphinxcontrib-applehelp=1.0.2
+  - sphinxcontrib-devhelp=1.0.2
+  - sphinxcontrib-htmlhelp=2.0.0
+  - sphinxcontrib-jsmath=1.0.1
+  - sphinxcontrib-qthelp=1.0.3
+  - sphinxcontrib-serializinghtml=1.1.5
   - sqlite=3.39.3
   - stack_data=0.2.0
   - statsmodels=0.13.2
@@ -152,7 +161,7 @@ dependencies:
   - pip:
     - build==0.9.0
     - commonmark==0.9.1
-    - docutils==0.19
+    - docutils==0.17.1
     - importlib-metadata==5.1.0
     - jaraco-classes==3.2.3
     - joblib==1.2.0
@@ -162,12 +171,15 @@ dependencies:
     - nilearn==0.9.2
     - pep517==0.13.0
     - pkginfo==1.8.3
+    - pygments==2.13.0
     - readme-renderer==37.3
     - requests-toolbelt==0.10.1
     - rfc3986==2.0.0
     - rich==12.6.0
     - scikit-learn==1.1.3
     - sklearn==0.0.post1
+    - sphinx==5.3.0
+    - sphinx-rtd-theme==1.1.1
     - threadpoolctl==3.1.0
     - tomli==2.0.1
     - twine==4.0.1
