--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,16 @@
 [metadata]
 name = nctpy
-version = 0.0.5
-author = Jennifer Stiso, Linden Parkes and Jason Kim
+version = 1.0.0
+author = Linden Parkes, Jason Kim, and Jennifer Stiso
 author_email =
-    jeni.stiso@gmail.com
-    lindenmp@seas.upenn.edu
+    lindenparkes@gmail.com
     jinsu1@seas.upenn.edu
+    jeni.stiso@gmail.com
 
 description = Python implementation of concepts from network control theory
 long_description = file: README.rst
 long_description_content_type = text/markdown
-url = https://github.com/BassettLab/control_package
+url = https://github.com/BassettLab/nctpy
 project_urls =
     Bug Tracker = https://github.com/BassettLab/nctpy/issues
 classifiers =
@@ -22,7 +22,7 @@ classifiers =
 package_dir =
     = src
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.9
 install_requires=
     numpy
     scipy
