updated following pypi release of v.1.0.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = nctpy
-version = 1.0.0
+version = 1.0.0.post0
 author = Linden Parkes, Jason Kim, and Jennifer Stiso
 author_email =
     lindenparkes@gmail.com
